--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -114,7 +114,8 @@ set $transparent #00000000
 
 set $mod Mod4
 set $mod1 Mod1
-set $terminal x-terminal-emulator
+#set $terminal x-terminal-emulator
+set $terminal kitty
 
 
 # Font for window titles. Will also be used by the bar unless a different font
