--- a/i3/.config/picom/picom.conf
+++ b/i3/.config/picom/picom.conf
@@ -34,7 +34,7 @@ focus-exclude = [ "class_g = 'Cairo-clock'",
 "class_g='Code'"
 ];
 opacity-rule = [
-"86:class_g='Code'",
+#"86:class_g='Code'",
 "90:class_g='terminal' && focused",
 "90:class_g='Pcmanfm'",
 "92:class_g='marktext'"
