--- a/lazygit/.config/lazygit/config.yml
+++ b/lazygit/.config/lazygit/config.yml
@@ -19,9 +19,9 @@ gui:
       - red
 
   showFileTree: true # for rendering changes files in a tree format
-  showListFooter: false # for seeing the '5 of 20' message in list panels
+  showListFooter: true # for seeing the '5 of 20' message in list panels
   showRandomTip: false
-  showBottomLine: false # for hiding the bottom information line (unless it has important information to tell you)
+  showBottomLine: true # for hiding the bottom information line (unless it has important information to tell you)
   showCommandLog: true
   showIcons: true
 
